--- a/css/style.css
+++ b/css/style.css
@@ -29,37 +29,112 @@ ul,li{list-style: none;}
 img{vertical-align: top;}
 h1,h2,h3,h5,h6{font-size: inherit;font-weight: inherit;}
 
+body {
+    background: #e8e8e8 url(../img/Ellipse_1_copy.png) 50% 130px no-repeat;
+}
 .content{
-
+    padding: 168px 0 137px 0;
+    max-width: 841px;
+    margin: 0px auto;   
 }
 .content-top{
-
+    text-align: center;
+    margin: 0px 0px 65px 0px ;
 }
 .content-top_category{
-
+    opacity: 0.6;
+    color: #273d46;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    text-transform: uppercase;
+    letter-spacing: 2.8px;
+    margin: 0px 0px 15px 0px;
 }
 .content-top_title{
-
+    color: #273d46;
+    font-size: 36px;
+    line-height: 50px;
 }
-.content-image{
-
+.content_image{
+    box-shadow: 0 15px 65px rgba(15,16,16,0.15);
+    background-color: #fff;
+    padding: 10px;
+    margin: 0px 0px 85px 0px;
 }
-.content-image_item{
-
-}
-
-.content-bottom{
-
+.content-image img{
+    max-width: 100%;
 }
 .content-bottom_text{
+    opacity: 0.8;
+    color: #273d46;
+    font-size: 24px;
+    line-height: 40px;
+    margin: 0px 0px 48px 0px;
+}
+.content-bottom_text p{
+    margin: 0px 0px 40px 0px;
 
 }
-.content-bottom_info{
-    
+.content-bottom_text p:last-child{
+   margin: 0px;
 }
 .content-bottom_info_list{
-
+    margin: 0px 0px 59px 0px;
+}
+.content-bottom_info_list li{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    margin: 0px 0px 15px 0px; 
+    background: url(../img/icons/check_icon.png) left no-repeat;
+    padding: 0px 0px 0px 36px;
+}  
+.content-bottom_info_list li:last-child{
+    margin: 0px;
+} 
+.content-bottom_info_list li:nth-child(1){
+    text-shadow: 0px 1px 0px rgba (0,0,0,0.3);
+    color: #273d46
+}
+.content-bottom_info_list li:nth-child(2){
+    color: #80b7b3;
+    font-style: italic;  
+}
+.content-bottom_info_list li:nth-child(3){
+    color: #273d46;
+    font-weight: 700;   
+}
+.content-bottom_info_list li:nth-child(4){
+    color: #273d46;
+    text-decoration: line-through;
+}
+.content-bottom_info_list li:nth-child(4) span{
+    opacity: 0.3;
 }
 .content-bottom_info_link{
-    
+    height: 44px;
+    display: inline-block;
+    line-height: 44px; 
+    border-radius: 30px;
+    padding: 0px 30px;
+    background-color: #80b7b3;
+    -webkit-box-shadow: 0px 5px 1px rgba (0,0,0,0.3); 
+    box-shadow: 0px 5px 1px rgba(0,0,0,0.3);
+    font-family: Arial, Helvetica, sans-serif;
+    color: #fff;
+    font-size: 14px;
+    text-transform: uppercase;
+    letter-spacing: 2.8px;
 }
+.content-bottom_info_link span{
+    padding: 0px 32px 0px 0px;
+    background: url(../img/icons/arrow.png) right no-repeat;
+}
+.content-bottom_info_link:hover{
+   background-color: #511e23; 
+}
+.content-bottom_info_link:active{
+    position: relative;
+    top: 3px;
+    -webkit-box-shadow: 0px 2px 1px rgba (0,0,0,0.5); 
+    box-shadow:  0px 2px 1px rgba (0,0,0,0.5);
+ }
